src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutput_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutput_StringErrorContext.class */
public final class ARBDebugOutput_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglDebugMessageControlARB(IIIIJZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("glDebugMessageControlARB(IIILjava/nio/IntBuffer;Z)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("glDebugMessageControlARB(IIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("nglDebugMessageInsertARB(IIIIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("glDebugMessageInsertARB(IIIILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("glDebugMessageInsertARB(IIIILjava/lang/CharSequence;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("nglDebugMessageCallbackARB(JJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("glDebugMessageCallbackARB(Lorg/lwjgl/opengl/GLDebugMessageARBCallbackI;J)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("nglGetDebugMessageLogARB(IIJJJJJJ)I", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("glGetDebugMessageLogARB(ILjava/nio/IntBuffer;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;Ljava/nio/ByteBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("glDebugMessageControlARB(III[IZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        methods.put("glGetDebugMessageLogARB(I[I[I[I[I[ILjava/nio/ByteBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/ARBDebugOutputErrorContext");
        return methods;
    }
}
